# esp-modem

./: CMakeLists.txt  README.md  idf_component.yml
examples/ap_to_pppos/: sdkconfig.old
examples/ap_to_pppos/main/: ap2pppos_example_main.c  modem_board.c
examples/modem_console/: sdkconfig.old
examples/pppos_client/: sdkconfig.old
examples/simple_cmux_client/: sdkconfig.old
examples/simple_cxx_client/: sdkconfig.old
include/: bg96.h  esp_bg96.h  esp_modem.h  esp_modem_api.h  esp_modem_compat.h  esp_modem_dce.h  esp_modem_dce_common_commands.h  esp_modem_dte.h  esp_modem_netif.h  esp_modem_reset_helper.h  esp_sim7600.h  esp_sim800.h  sim7600.h  sim800.h
private_include/: esp_modem_dce_command_lib.h  esp_modem_dce_internal.h  esp_modem_internal.h
src/: bg96.c  esp_bg96.c  esp_modem.c  esp_modem_compat.c  esp_modem_dce.c  esp_modem_dce_command_lib.c  esp_modem_dce_common_commands.c  esp_modem_dce_internal.c  esp_modem_dte.c  esp_modem_netif.c  esp_modem_recov_helper.c  esp_modem_reset_helper.c  esp_sim7600.c  esp_sim800.c  sim7600.c  sim800.c
